--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/img/favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+
+      </header>
+      <main class="main">
+
+      </main>
+      <footer class="footer">
+ 
+      </footer>    
 </body>
 </html>
