feat: create container element

--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 </head>
 <body>
     <header class="header">
+        <div class="container header-container">
 
-      </header>
-      <main class="main">
+        </div>
+    </header>
+    <main class="main">
+        <div class="container main-container">
 
-      </main>
-      <footer class="footer">
- 
-      </footer>    
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container footer-container">
+
+        </div>
+    </footer>    
 </body>
 </html>
