--- a/index.html
+++ b/index.html
@@ -28,7 +28,45 @@
     </header>
     <main class="main">
         <div class="container main-container">
-
+            <section class="section" id="profile">
+                <h1 class="section-title">Serzhan Ussenov</h1>
+                <h2 class="section-title">Junior Front-End Developer</h2>       
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">Summary</h2>
+                <p>
+                    I'm a second-year student in master's program at Karagandy Technical University. I am curious and am constantly learning. 
+                </p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+                <pre>
+                    <code>
+    function sum(a, b) {
+    return a + b;
+    }
+    let result = sum(1, 2);
+    alert(result);
+                    </code>
+                </pre> 
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">Projects</h2>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>Karagandy Technical University, computing technology and software.</p>
+            </section>
+            <section class="section" id="english">
+                <h2 class="section-title">English</h2>
+                <p>B1 - Pre-Intermediate</p>
+            </section>
         </div>
     </main>
     <footer class="footer">
