feat: add avatar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="nav">
                 <ul class="nav-list">          
                   <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                  <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
+                  <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
                   <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>          
                   <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
                   <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -29,6 +29,7 @@
     <main class="main">
         <div class="container main-container">
             <section class="section" id="profile">
+                <img src="./assets/img/avatar.png" alt="my avatar">
                 <h1 class="section-title">Serzhan Ussenov</h1>
                 <h2 class="section-title">Junior Front-End Developer</h2>       
             </section>
@@ -38,7 +39,7 @@
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
                 <p>
-                    I'm a second-year student in master's program at Karagandy Technical University. I am curious and am constantly learning. 
+                    I'm a second-year student in master's program at Karagandy Technical University. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
                 </p>
             </section>
             <section class="section" id="skills">
