--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
+                <ul class="section-list">
+                    <li class="section-item contacts-item">
+                      Email: <a href="mailto:ussenov.serzhan@gmail.com" title="email">ussenov.serzhan@gmail.com</a>
+                    </li>
+                    <li class="section-item contacts-item">
+                      Github: <a href="https://github.com/serzhan-ussenov" title="github">serzhan-ussenov</a>
+                    </li>
+                    <li class="section-item contacts-item">
+                      Telegram: <a href="https://t.me/serzhan_u" title="github">@serzhan_u</a>
+                    </li>
+                  </ul>
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
@@ -44,6 +55,20 @@
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
+                <ul class="section-list">
+                    <li class="section-item">
+                    HTML
+                    </li>
+                    <li class="section-item">
+                    JavaScript
+                    </li>
+                    <li class="section-item">
+                    CSS
+                    </li>
+                    <li class="section-item">
+                    Git>
+                    </li>
+                  </ul>
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
@@ -57,8 +82,9 @@
                     </code>
                 </pre> 
             </section>
-            <section class="section" id="projects">
+            <section class="section" id="projects" >
                 <h2 class="section-title">Projects</h2>
+                <a href="https://serzhan-ussenov.github.io/rsschool-cv/"  title="CV"> CV</a>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
@@ -72,8 +98,9 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-
-        </div>
+            <div>© 2022 <a href="https://github.com/serzhan-ussenov" class="github nav-link">serzhan-ussenov</a></div>
+            <a href="https://rs.school/js/" class="rss"></a>
+          </div>
     </footer>    
 </body>
 </html>
