--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Serzhan Ussenov</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/img/favicon.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container header-container">
             <nav class="nav">
-                <ul class="nav-list">          
+                <ul class="nav-list">
                   <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                   <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>          
+                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>     
                   <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
                   <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                   <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
@@ -31,7 +31,6 @@
             <section class="section" id="profile">
                 <img src="./assets/img/avatar.png" alt="my avatar">
                 <h1 class="section-title">Serzhan Ussenov</h1>
-                <h2 class="section-title">Junior Front-End Developer</h2>       
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
@@ -50,7 +49,7 @@
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
                 <p>
-                    I'm a second-year student in master's program at Karagandy Technical University. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
+                    I'm a second-year student in master's program at Karagandy Technical University. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
                 </p>
             </section>
             <section class="section" id="skills">
@@ -66,7 +65,7 @@
                     CSS
                     </li>
                     <li class="section-item">
-                    Git>
+                    Git
                     </li>
                   </ul>
             </section>
@@ -74,17 +73,17 @@
                 <h2 class="section-title">Code</h2>
                 <pre>
                     <code>
-    function sum(a, b) {
-    return a + b;
-    }
-    let result = sum(1, 2);
-    alert(result);
+function sum(a, b) {
+return a + b;
+}
+let result = sum(1, 2);
+alert(result);
                     </code>
-                </pre> 
+                </pre>
             </section>
             <section class="section" id="projects" >
                 <h2 class="section-title">Projects</h2>
-                <a href="https://serzhan-ussenov.github.io/rsschool-cv/"  title="CV"> CV</a>
+                <a href="https://serzhan-ussenov.github.io/rsschool-cv/" class="section-item a" title="CV"> CV</a>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
@@ -100,7 +99,7 @@
         <div class="container footer-container">
             <div>© 2022 <a href="https://github.com/serzhan-ussenov" class="github nav-link">serzhan-ussenov</a></div>
             <a href="https://rs.school/js/" class="rss"></a>
-          </div>
-    </footer>    
+        </div>
+    </footer>
 </body>
 </html>
