feat: change background color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       Github: <a href="https://github.com/serzhan-ussenov" title="github">serzhan-ussenov</a>
                     </li>
                     <li class="section-item contacts-item">
-                      Telegram: <a href="https://t.me/serzhan_u" title="github">@serzhan_u</a>
+                      Telegram: <a href="https://t.me/serzhan_u" title="telegram">@serzhan_u</a>
                     </li>
                   </ul>
             </section>
@@ -83,7 +83,7 @@ alert(result);
             </section>
             <section class="section" id="projects" >
                 <h2 class="section-title">Projects</h2>
-                <a href="https://serzhan-ussenov.github.io/rsschool-cv/" class="section-item a" title="CV"> CV</a>
+                <a href="https://serzhan-ussenov.github.io/rsschool-cv/" class="section-item a" title="CV">CV</a>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
@@ -98,7 +98,7 @@ alert(result);
     <footer class="footer">
         <div class="container footer-container">
             <div>© 2022 <a href="https://github.com/serzhan-ussenov" class="github nav-link">serzhan-ussenov</a></div>
-            <a href="https://rs.school/js/" class="rss"></a>
+            <a href="https://rs.school/js/" class="rss">rss</a>
         </div>
     </footer>
 </body>
