feat: add rs school icon

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
                 <p>
-                    I'm a second-year student in master's program at Karagandy Technical University. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
+                    I am driven by motivation and a keen focus on delivering results. With a steadfast commitment to growth, I am actively seeking a team-oriented company that embodies success in order to further advance my professional journey.
                 </p>
             </section>
             <section class="section" id="skills">
@@ -71,19 +71,22 @@
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
-                <pre>
-                    <code>
-function sum(a, b) {
-return a + b;
-}
-let result = sum(1, 2);
-alert(result);
-                    </code>
-                </pre>
+<pre>
+<code>
+<font color="#3366ff">function</font> <font color="#fbfd9e">sum</font><font color="#fdff00">(</font><font color="#a9ecff">a</font>, <font color="#a9ecff">b</font><font color="#fdff00">)</font> <font color="#fdff00">{</font>
+<font color="#ae4dc4">return</font> <font color="#a9ecff">a</font> + <font color="#a9ecff">b</font>;
+<font color="#fdff00">}</font>
+<font color="#3366ff">let</font> <font color="#a9ecff">result</font> = <font color="#fbfd9e">sum</font><font color="#fdff00">(</font><font color="#83b77a">1</font>, <font color="#83b77a">2</font><font color="#fdff00">)</font>;
+<font color="#fbfd9e">alert</font><font color="#fdff00">(</font><font color="#a9ecff">result</font><font color="#fdff00">)</font>;
+</code>
+</pre>
             </section>
             <section class="section" id="projects" >
                 <h2 class="section-title">Projects</h2>
-                <a href="https://serzhan-ussenov.github.io/rsschool-cv/" class="section-item a" title="CV">CV</a>
+                <ul class="section-list">
+                    <li class="section-item projects-item">
+                        <a href="https://serzhan-ussenov.github.io/rsschool-cv/" title="CV">CV</a>
+                    </li>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
@@ -97,8 +100,8 @@ alert(result);
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div>© 2022 <a href="https://github.com/serzhan-ussenov" class="github nav-link">serzhan-ussenov</a></div>
-            <a href="https://rs.school/js/" class="rss">rss</a>
+            <div>© 2023 <a href="https://github.com/serzhan-ussenov" class="github nav-link">serzhan-ussenov</a></div>
+            <a href="https://rs.school/js/" class="rss"></a>
         </div>
     </footer>
 </body>
