fix: delete font tags

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 <h2 class="section-title">Code</h2>
 <pre>
 <code>
-<font color="#3366ff">function</font> <font color="#fbfd9e">sum</font><font color="#fdff00">(</font><font color="#a9ecff">a</font>, <font color="#a9ecff">b</font><font color="#fdff00">)</font> <font color="#fdff00">{</font>
-<font color="#ae4dc4">return</font> <font color="#a9ecff">a</font> + <font color="#a9ecff">b</font>;
-<font color="#fdff00">}</font>
-<font color="#3366ff">let</font> <font color="#a9ecff">result</font> = <font color="#fbfd9e">sum</font><font color="#fdff00">(</font><font color="#83b77a">1</font>, <font color="#83b77a">2</font><font color="#fdff00">)</font>;
-<font color="#fbfd9e">alert</font><font color="#fdff00">(</font><font color="#a9ecff">result</font><font color="#fdff00">)</font>;
+function sum(a, b) {
+return a + b;
+}
+let result sum(1, 2);
+alert(result);
 </code>
 </pre>
             </section>
@@ -87,6 +87,7 @@
                     <li class="section-item projects-item">
                         <a href="https://serzhan-ussenov.github.io/rsschool-cv/" title="CV">CV</a>
                     </li>
+                </ul>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
